objects/ssot__AssetWarrantyTerm__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetWarrantyNumber__c</fullName>
        <label>Asset Warranty Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExchangeType__c</fullName>
        <label>Exchange Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExclusionsTerm__c</fullName>
        <label>Exclusion Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpensesCoveredEndDate__c</fullName>
        <label>Expenses Covered End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpensesCoveredPercent__c</fullName>
        <label>Expenses Covered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Warranty Term Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTransferable__c</fullName>
        <label>Is Transferable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LaborCoveredEndDate__c</fullName>
        <label>Labor Covered End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LaborCoveredPercent__c</fullName>
        <label>Labor Covered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartsCoveredEndDate__c</fullName>
        <label>Parts Covered End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PartsCoveredPercent__c</fullName>
        <label>Parts Covered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriceBookId__c</fullName>
        <label>Price Book</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyTermId__c</fullName>
        <label>Warranty Term</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyType__c</fullName>
        <label>Warranty Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009173213_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetWarrantyTerm_AssetId_map_Asset__rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetWarrantyTerm_AssetId_map_Asset__rel</relationshipLabel>
        <relationshipName>rel_1702009173213_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009173541_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetWarrantyTerm_WarrantyTermId_map_rel</label>
        <referenceTo>ssot__WarrantyTerm__dlm</referenceTo>
        <relationshipLabel>AssetWarrantyTerm_WarrantyTermId_map_rel</relationshipLabel>
        <relationshipName>rel_1702009173541_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009464228_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetWarrantyTerm_PriceBookId_map_Pr_rel</label>
        <referenceTo>ssot__PriceBook__dlm</referenceTo>
        <relationshipLabel>AssetWarrantyTerm_PriceBookId_map_Pr_rel</relationshipLabel>
        <relationshipName>rel_1702009464228_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>